<resources>
    <string name="app_name">eFood</string>

    <string name="recipe_fragment">Recipe</string>
    <string name="food_joke_fragment">Joke</string>
    <string name="favorite_fragment">Favorites</string>
    <string name="adding_food">Adding Food</string>
    <string name="_100">100</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="vegan">Vegan</string>
    <string name="meal_type">Meal Type</string>
    <string name="main_course">main course</string>
    <string name="side_dish">side dish</string>
    <string name="dessert">dessert</string>
    <string name="appetizer">appetizer</string>
    <string name="salad">salad</string>
    <string name="bread">bread</string>
    <string name="search">search</string>
    <string name="breakfast">breakfast</string>
    <string name="soup">soup</string>
    <string name="beverage">beverage</string>
    <string name="sauce">sauce</string>
    <string name="marinade">marinade</string>
    <string name="fingerfood">fingerfood</string>
    <string name="snack">snack</string>
    <string name="drink">drink</string>
    <string name="diet_type">Diet Type</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole30">Whole30</string>
    <string name="apply">Apply</string>
    <string name="food_title_overview">Food Title Overview</string>
    <string name="healthy">Healthy</string>
    <string name="summary">summary</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="cheap">Cheap</string>
    <string name="grams">Grams</string>
    <string name="consistency">Consistency</string>
    <string name="origin">Origin</string>
    <string name="saveToFavorite">savetoFavorite</string>
    <string name="recipe_saved">Recipe Saved</string>
    <string name="no_favorite_recipes_saved">No Favorite Recipes Saved.</string>
    <string name="empty_list">Empty List</string>
    <string name="delete_all">Delete All</string>
    <string name="_2020_20_20">2020/20/20</string>
    <string name="this_is_a_joke_food">This is a Joke Food</string>
    <string name="error_food_joke">Error Food Joke</string>
    <string name="no_data">No Data</string>
    <string name="recipes_not_found">Recipes Not Found.</string>
    <string name="joke_not_found">Joke Not Found!</string>
    <string name="share">share</string>

    <string name="this_is_full">This disk is full</string>
    <string name="request_timeout">request_timeout</string>
    <string name="too_many_requests">too_many_requests</string>
    <string name="not_network">not_network</string>
    <string name="payload_too_large">payload_too_large</string>
    <string name="server_error">server_error</string>
    <string name="serialization_error">serialization_error</string>
    <string name="unknown_error">unknown_error</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>