<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layoutDescription="@xml/fragment_overview_scene"
    tools:context=".presentation.details.pages.OverviewFragment">

    <ImageView
        android:id="@+id/imgOverview"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/backgrounds/scenic" />

    <View
        android:id="@+id/view6"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@drawable/bg_overview_gradient"
        app:layout_constraintBottom_toBottomOf="@+id/imgOverview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".65" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="12dp"
        android:text="@string/_100"
        android:textColor="@color/white"
        app:drawableTint="@color/white"
        app:drawableTopCompat="@drawable/ic_clock"
        app:layout_constraintBottom_toBottomOf="@+id/imgOverview"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvLikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="12dp"
        android:text="@string/_100"
        android:textColor="@color/white"
        app:drawableTint="@color/white"
        app:drawableTopCompat="@drawable/ic_heart"
        app:layout_constraintBottom_toBottomOf="@+id/imgOverview"
        app:layout_constraintEnd_toStartOf="@+id/tvTime"
        app:layout_constraintTop_toTopOf="@+id/tvTime" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/courgette"
        android:text="@string/food_title_overview"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgOverview" />

    <TextView
        android:id="@+id/tvCheckVegetarian"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawablePadding="8dp"
        android:text="@string/vegetarian"
        app:drawableStartCompat="@drawable/ic_checkmark"
        app:drawableTint="@color/darkGrey"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/tvTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/tvCheckGlutenFree"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawablePadding="8dp"
        android:text="@string/gluten_free"
        app:drawableStartCompat="@drawable/ic_checkmark"
        app:drawableTint="@color/darkGrey"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/tvCheckHealthy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawablePadding="8dp"
        android:text="@string/healthy"
        app:drawableStartCompat="@drawable/ic_checkmark"
        app:drawableTint="@color/darkGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/tvCheckVegan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:text="@string/vegan"
        app:drawableStartCompat="@drawable/ic_checkmark"
        app:drawableTint="@color/darkGrey"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/tvCheckVegetarian"
        app:layout_constraintTop_toBottomOf="@+id/tvCheckVegetarian" />


    <TextView
        android:id="@+id/tvDairyFree"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:text="@string/dairy_free"
        app:drawableStartCompat="@drawable/ic_checkmark"
        app:drawableTint="@color/darkGrey"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tvCheckGlutenFree" />

    <TextView
        android:id="@+id/tvCheap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:text="@string/cheap"
        app:drawableStartCompat="@drawable/ic_checkmark"
        app:drawableTint="@color/darkGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvDairyFree"
        app:layout_constraintTop_toBottomOf="@+id/tvCheckHealthy" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDairyFree">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView

                android:id="@+id/tvSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/summary"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.motion.widget.MotionLayout>